--- a/css/media.css
+++ b/css/media.css
@@ -1,7 +1,56 @@
 @media screen and (min-width: 320px) {
-    .container {
-        max-width: 320px;
+    .img-webakula {
+        width: 120px;
+        height: 20px;
+        margin-left: 10px;
+    }
+    
+    hr {
+        border: none; 
+        height: 2px; 
+        background-color: #62616164; 
+        margin: 20px 0; 
+        width: 62%; 
+        margin-left: auto; 
+        margin-right: auto;
+        max-width: 250px;
+      }
+    .ul-point{
+        display: none;
+    }
+    .nav-menu {
+        display: flex; 
+        flex-wrap: nowrap; 
+        overflow-x: auto; 
+        overflow-y: hidden; 
+        list-style: none; 
+        margin: 0;
+        background-color: #d9ff01;
+        white-space: nowrap; 
+        margin-left: auto;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
         
+    .nav-menu li {
+        display: inline-block; 
+        margin-right: 15px; 
+    }
+    
+    .nav-link {
+        text-decoration: none; 
+        color: #080808;
+        font-weight: bold;
+    }
+    
+    .nav-link:hover {
+        color: #0b74e5; 
+    }
+
+    
+    .header-logo-icon{
+        margin-left: 5px;
+        margin-right: 5px;
     }
     .section {
         padding: 96px 0;
@@ -77,26 +126,17 @@
     .logo-left-header {
         padding: 16px;
     }
-    .order-sec {
+   /*.order-sec {
         padding: 72px 0;
     
-    }
+    }*/
     .list-portfolio {
         display: flex;
         flex-wrap: wrap;
         column-gap: 24px;
         /*row-gap: 48px;*/
     }
-    .order-title {
-        text-align: center;
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.07;
-        letter-spacing: 0.02em;
-        text-transform: capitalize;
-        margin: 0 auto;
-        margin-bottom: 72px;
-    }
+  
     /*end-navigation*/
     /*footer*/
     /*.footer {
@@ -128,6 +168,7 @@
     }
     .paragraph-footer {
         margin: 0 auto;
+        display: flex;
     }
     .list-socials-footer {
         display: flex;
@@ -158,6 +199,10 @@
     .modal {
         width: 288px;
     }
+    .order-button {
+        margin-left: auto;
+    }
+    
 }
 
 
@@ -178,8 +223,59 @@
 
 
 @media screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
+    hr {
+        border: none; 
+        height: 2px; 
+        margin: 20px 0; 
+        width: 100%; 
+        margin-left: auto; 
+        margin-right: auto;
+        max-width: 250px;
+      }
+    .ul-point{
+        display: flex;
+        gap: 10px;
+        margin-top: 10px;
+        margin-left: 35px;
+    }
+    .nav-menu {
+        display: flex; 
+        flex-wrap: nowrap; 
+        overflow-x: none; 
+        overflow-y: none; 
+        list-style: none; 
+        background-color: #d9ff01;
+        white-space: nowrap; 
+        margin-left: auto;
+        margin-bottom: 50px;
+        max-width: 700px;
+    }
+        
+    .nav-menu li {
+        display: inline-block; 
+        margin-right: 15px; 
+    }
+    
+    .nav-link {
+        text-decoration: none; 
+        color: #080808;
+        font-weight: bold;
+    }
+    
+    .nav-link:hover {
+        color: #007BFF; 
+    }
+
+
+    
+    .header-logo-icon{
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    
+    .order-title {
+        margin: 0 auto 35px;
+        
     }
     .section {
         padding: 96px 0;
@@ -202,21 +298,12 @@
     /*.img-team{
         margin-bottom: 0;
     }*/
-
+    .order-button {
+        margin-left: auto;
+    }
 
 
     
-    .img-portfolio:not(:last-child) {
-        margin-bottom: 0;
-    }
-    
-    .img-portfolio:nth-last-child(6),
-    .img-portfolio:nth-last-child(5),
-    .img-portfolio:nth-last-child(4),
-    .img-portfolio:nth-last-child(3){
-        margin-bottom: 72px;
-        /*margin-bottom: 0;*/
-    }
 
 
 
@@ -255,22 +342,11 @@
         display: inline;
 
     }
-    .order-sec {
+    /*.order-sec {
         padding: 112px 0;
 
-    }
-    .order-title {
-        font-size: 56px;
-        line-height: 1.47;
-        text-align: center;
-        letter-spacing: 0.02em;
-        line-height: 1.07;
-        color: #ffffff;
-        max-width: 496px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 48px;
-    }
+    }*/
+    
     .list-portfolio {
         display: flex;
         flex-wrap: wrap;
@@ -324,69 +400,8 @@
         gap: 24px;
         row-gap: 72px;
     }
-    /*modal*/
-    .modal {
-        width: 408px;
-    }
-    /*.item-desc {
-
-    }*/
-    .item-desc:nth-last-child(1),
-    .item-desc:nth-last-child(2) {
-        margin-bottom: 0;
-    }
-    .product-image-portfolio {
-        width: 356px;
-        height: 300px;
-    }
-    .container-footer-logo {
-        margin: 0;
-    }
-    .paragraph-footer {
-        margin: 0 auto;
-        display: flex;
-        gap: 24px;
-        }
-    .list-desc {
-        flex-direction: unset;
-        gap: 24px;
-        width: 736px;
-    } 
-}
-/*Mobile menu*/
-@media only screen and (max-width: 767.98px) {
-    .nav-menu {
-        display: none;
-    }
-    .address {
-        display: none;
-    }
-}
-@media screen and (min-width: 768px) {
-    .header-menu-btn {
-        display: none;
-    }
-    .logo-left-header {
-        padding: 25px 16px;
-    }
     
-    .address-socials {
-        display: block;
-        padding: 16px;
-    }
-    .item-address {
-        padding: 0;
-    }
-    .item-address:not(:last-child) {
-        
-        margin-bottom: 12px;
-    }
-    .container-header-inner {
-        height: 72px;
-    }
 }
-/*End-of-mobile-menu*/
-
 
 
 
@@ -408,10 +423,56 @@
 
 
 @media screen and (min-width: 1158px) {
+    hr {
+        border: none; 
+        height: 2px; 
+        margin: 20px 0; 
+        width: 100%; 
+        margin-left: auto; 
+        margin-right: auto;
+        max-width: 250px;
+        width: 350px;
+        max-width: 400px;
+      }
+    .paragraph-footer{
+        width: auto;
+    }
+    .ul-point{
+        margin-top: 120px;
+        margin-left: 163px;
+    }
+    .nav-menu {
+        display: flex; 
+        flex-wrap: nowrap; 
+        overflow-x: none; 
+        overflow-y: none; 
+        list-style: none; 
+        background-color: #d9ff01;
+        white-space: nowrap; 
+        margin-left: auto;
+        margin-right: 40px;
+        max-width: 700px;
+    }
+        
+    .nav-menu li {
+        display: inline-block; 
+        margin-right: 15px; 
+    }
+
+    .headerContact {
+        margin-left: auto;
+    }
+    .header-logo-icon{
+        margin-right: 400px;
+    }
     .container {
-        max-width: 1158px;
+        max-width: 1250px;
         
-        
+    }
+    .order-title {
+        margin-left: 150px;
+        margin-bottom: 35px;
+
     }
     .section {
         padding: 120px 0;
@@ -423,15 +484,7 @@
         
     }
 
-    .img-portfolio:not(:last-child) {
-        margin-bottom: 48px;
-    }
-    .img-portfolio:nth-last-child(1),
-    .img-portfolio:nth-last-child(2),
-    .img-portfolio:nth-last-child(3) {
-        margin-bottom: 0;
-        
-    }
+    
     
 
 
@@ -508,24 +561,15 @@
    
    .address-socials {
        display: flex;
-       gap: 40px;
        padding: 24px;
    }
    .item-address:not(:last-child) {
        margin-bottom: 0;
    }
-   .order-sec {
+   /*.order-sec {
        padding: 188px 0;
 
-   }
-   .list-portfolio {
-       display: flex;
-       flex-wrap: wrap;
-       column-gap: 24px;
-       /*row-gap: 48px;*/
-       justify-content: center;
-       align-items: center;
-   }
+   }*/
    
    /*.footer {
        width: 1158px;
@@ -585,6 +629,9 @@
         width: 360px;
         width: 300px;
     }
+    .order-button {
+        margin-left: 150px;
+    }
 
 }
 
@@ -603,7 +650,7 @@
         /*max-width: 320px;*/
         max-height: 432px;
         /*возможно убрать везде*/
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/Dark-bg_mob.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/back.png);
     }
 }
 
@@ -613,7 +660,7 @@
         /*max-width: 320px;*/
         max-height: 432px;
         /*возможно убрать везде*/
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/Dark-bg_mob@2x.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/back.png);
     }
 }
 /*Tablet*/
@@ -621,7 +668,7 @@
     .order-sec {
         /*max-width: 768px;*/
         max-height: 436px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/Dark-bg_tab.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/back.png);
     }
 }
 
@@ -630,7 +677,7 @@
         /*max-width: 768px;*/
         max-height: 436px;
         /*возможно убрать везде*/
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/Dark-bg_tab@2x.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/back.png);
     }
 }
 
@@ -639,7 +686,7 @@
     .order-sec {
         /*max-width: 1158px;*/
         max-height: 600px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/Dark-bg_desk.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/back.png);
     }
 }
 
@@ -648,7 +695,7 @@
         /*max-width: 1158px;*/
         max-height: 600px;
         /*возможно убрать везде*/
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/Dark-bg_desk@2x.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-img/back.png);
     }
 }
 
@@ -683,3 +730,9 @@
         height: 280px;
     }
 }
+
+
+
+
+
+
