--- a/css/styles.css
+++ b/css/styles.css
@@ -183,15 +183,14 @@ textarea {
 
 .item-address {
     gap: 40px;
-    padding: 24px 0;
+    padding: 15px 0;
 }
 .address-info {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #b8b5b5;
     gap: 40px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: background-color 0.2s ease, color 0.2s ease;}
 
 .address-info:hover,
 .address-info:focus {
@@ -368,8 +367,19 @@ textarea {
     gap: 16px;
     
 }
-.social-item-footer {
+.social-item-header {
     width: 40px;
+}
+.social-item-footer{
+    /*width: 40px;*/
+}
+.social-link-header {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link-footer {
     width: 100%;
@@ -381,8 +391,12 @@ textarea {
 }
 
 
+.icon-header {
+    fill: var(--color-paragraph-footer);
+}
 .icon-footer {
     fill: var(--color-paragraph-footer);
+
 }
 
 .subscribe-footer {
@@ -491,6 +505,11 @@ textarea {
 }
 .img-about-us {
     color: #fff;
+}
+
+.src-footer:hover,
+.src-footer:focus {
+    color: #404bbf;
 }
 
 
