--- a/css/media.css
+++ b/css/media.css
@@ -551,7 +551,7 @@
     }
     .container {
         max-width: 1250px;
-        
+        margin: 0 auto;
     }
     .order-title {
         margin-left: 150px;
